fixed wrapping problems so that items wrap to fit smaller browser window sizes

--- a/bernies-ties/public/stylesheets/style.css
+++ b/bernies-ties/public/stylesheets/style.css
@@ -21,7 +21,6 @@ div#portrait {
 
 #wrap {
 	padding-top: 60px;
-	width: 980px;
 	margin: 0 auto;
 }
 
